--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "express": "^4.17.1",
     "http": "*",
     "mongoose": "^5.12.5",
-    "socket.io": "^4.1.0"
+    "nodemon": "^2.0.12",
+    "socket.io": "^4.1.0",
+    "to": "^0.2.9",
+    "update": "^0.7.4"
   }
 }
